--- a/netgo.treeplanting.Api/appsettings.Development.json
+++ b/netgo.treeplanting.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "SendGrid": {
-    "Key": "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"
+    "Key": ""
   },
 
   "Logging": {
